<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tiew_93my_170503"
    tools:context=".Words">

    <TextView
        android:id="@+id/Instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Instructions"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="25sp"
        android:fontFamily="@font/kindergarten"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/Word_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="7"
            android:text="" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="write2File"
            android:text="@string/Enter" />
    </LinearLayout>

    <TextView
        android:id="@+id/Dictionary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/Dictionary"
        app:layout_constraintBottom_toTopOf="@+id/StartGame"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:fontFamily="@font/kindergarten"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/StartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StartGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="startGame"/>

</android.support.constraint.ConstraintLayout>